# proxy-subscriber

./: .gitignore  Cargo.toml  proxy-subscriber.sql
src/: args.rs  config.rs  error.rs  form.rs  handler.rs  helper.rs  html.rs  main.rs  model.rs  types.rs
src/db/: cfip.rs  group.rs  mod.rs  node.rs
templates/: base.html  index.html
templates/group/: add.html  index.html
templates/node/: add.html  edit.html  index.html
