[package]
name = "proxy-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
axum="0.4"
tokio={version="1", features=["full"]}
serde={version="1", features=["derive"]}
askama = "0.11"
tower-http = { version = "0.2", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tokio-postgres = "0.7"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
deadpool-postgres = { version = "0.10", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
postgres-types = { version = "0.2", features = ["derive"] }
config = "0.11"
dotenv = "0.15"
